--- a/.weechat/weechat.conf
+++ b/.weechat/weechat.conf
@@ -1,6 +1,13 @@
 #
 # weechat -- weechat.conf
 #
+# WARNING: It is NOT recommended to edit this file by hand,
+# especially if WeeChat is running.
+#
+# Use /set or similar command to change settings in WeeChat.
+#
+# For more info, see: https://weechat.org/doc/quickstart
+#
 
 [debug]
 
@@ -13,6 +20,7 @@ sys_rlimit = ""
 
 [look]
 align_end_of_lines = message
+align_multiline_words = on
 bar_more_down = "++"
 bar_more_left = "<<"
 bar_more_right = ">>"
@@ -26,7 +34,7 @@ buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
 buffer_search_where = message
-buffer_time_format = "%H:%M"
+buffer_time_format = "%H:%M "
 color_basic_force_bold = off
 color_inactive_buffer = on
 color_inactive_message = on
@@ -103,7 +111,7 @@ prefix_join = "-->"
 prefix_network = "--"
 prefix_quit = "<--"
 prefix_same_nick = ""
-prefix_suffix = "|"
+prefix_suffix = " "
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
@@ -137,8 +145,8 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = lightmagenta
-chat_highlight_bg = blue
+chat_highlight = white
+chat_highlight_bg = 1
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
@@ -200,6 +208,7 @@ base_word_until_cursor = on
 command_inline = on
 default_template = "%(nicks)|%(irc_channels)"
 nick_add_space = on
+nick_case_sensitive = off
 nick_completer = ":"
 nick_first_only = off
 nick_ignore_chars = "[]`_-^"
@@ -254,12 +263,26 @@ buffers.filling_left_right = vertical
 buffers.filling_top_bottom = columns_vertical
 buffers.hidden = on
 buffers.items = "buffers"
-buffers.position = top
+buffers.position = left
 buffers.priority = 0
 buffers.separator = on
 buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
+buflist.color_bg = default
+buflist.color_delim = default
+buflist.color_fg = default
+buflist.conditions = ""
+buflist.filling_left_right = vertical
+buflist.filling_top_bottom = columns_vertical
+buflist.hidden = off
+buflist.items = "buflist"
+buflist.position = left
+buflist.priority = 0
+buflist.separator = on
+buflist.size = 0
+buflist.size_max = 0
+buflist.type = root
 input.color_bg = default
 input.color_delim = cyan
 input.color_fg = default
@@ -267,7 +290,7 @@ input.conditions = "${buffer.name} != highmon"
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = "[input_search],[input_paste],input_text"
+input.items = "[+buffer_name],[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = off
@@ -294,7 +317,7 @@ nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
 nicklist.filling_left_right = vertical
 nicklist.filling_top_bottom = columns_vertical
-nicklist.hidden = off
+nicklist.hidden = on
 nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
@@ -308,7 +331,7 @@ status.color_fg = lightred
 status.conditions = "${buffer.name}!=highmon"
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
-status.hidden = off
+status.hidden = on
 status.items = "[time]-[+buffer_name]"
 status.position = bottom
 status.priority = 500
@@ -333,70 +356,53 @@ title.type = window
 
 [layout]
 backup.buffer = "core;weechat;1"
-backup.buffer = "irc;server.bnc;1"
-backup.buffer = "irc;server.bnc2;1"
 backup.buffer = "perl;highmon;2"
-backup.buffer = "irc;bnc.#stratum0;3"
-backup.buffer = "irc;bnc.##knuddelkanal;4"
-backup.buffer = "irc;bnc.#archlinux.de;5"
-backup.buffer = "irc;bnc.#archlinux;6"
-backup.buffer = "irc;bnc.#manjaro-de;7"
-backup.buffer = "irc;bnc.#manjaro-de-talk;8"
-backup.buffer = "irc;bnc.#crux;9"
-backup.buffer = "irc;bnc.##tilingwm;10"
-backup.buffer = "irc;bnc.#i3;11"
-backup.buffer = "irc;bnc.#neovim;12"
-backup.buffer = "irc;bnc.#python.de;13"
-backup.buffer = "irc;bnc.##learnpython;14"
-backup.buffer = "irc;bnc.#go-nuts;15"
-backup.buffer = "irc;bnc.#lua;16"
-backup.buffer = "irc;bnc.##networking;17"
-backup.buffer = "irc;bnc.##security;18"
-backup.buffer = "irc;bnc.#fluxfingers;19"
-backup.buffer = "irc;bnc.#honeypots;20"
-backup.buffer = "irc;bnc.#r_netsec;21"
-backup.buffer = "irc;bnc.#radare;22"
-backup.buffer = "irc;bnc.#weechat;23"
-backup.buffer = "irc;bnc.#znc;24"
-backup.buffer = "irc;bnc.#arduino;25"
-backup.buffer = "irc;bnc2.*status;26"
-backup.buffer = "irc;bnc.tnias;27"
+backup.buffer = "perl;iset;3"
 backup.window = "1;0;15;1;-;-"
-backup.window = "2;1;0;0;irc;server.bnc2"
+backup.window = "2;1;0;0;core;weechat"
 backup.window = "3;1;0;0;perl;highmon"
 default.buffer = "core;weechat;1"
-default.buffer = "irc;server.bnc;1"
 default.buffer = "perl;highmon;2"
-default.buffer = "irc;bnc.#stratum0;3"
-default.buffer = "irc;bnc.##knuddelkanal;4"
-default.buffer = "irc;bnc.##learnpython;5"
-default.buffer = "irc;bnc.##networking;6"
-default.buffer = "irc;bnc.##security;7"
-default.buffer = "irc;bnc.##tilingwm;8"
-default.buffer = "irc;bnc.#archlinux;9"
-default.buffer = "irc;bnc.#archlinux.de;10"
-default.buffer = "irc;bnc.#arduino;11"
-default.buffer = "irc;bnc.#crux;12"
-default.buffer = "irc;bnc.#fluxfingers;13"
-default.buffer = "irc;bnc.#go-nuts;14"
-default.buffer = "irc;bnc.#honeypots;15"
-default.buffer = "irc;bnc.#i3;16"
-default.buffer = "irc;bnc.#lua;17"
-default.buffer = "irc;bnc.#manjaro-de;18"
-default.buffer = "irc;bnc.#manjaro-de-talk;19"
-default.buffer = "irc;bnc.#neovim;20"
-default.buffer = "irc;bnc.#python.de;21"
-default.buffer = "irc;bnc.#r_netsec;22"
-default.buffer = "irc;bnc.#radare;23"
-default.buffer = "irc;bnc.#weechat;24"
-default.buffer = "irc;bnc.#znc;25"
-default.buffer = "irc;bnc.#zeromutarts;26"
-default.buffer = "irc;bnc.##shellcoder;27"
-default.buffer = "irc;bnc.tnias;28"
-default.window = "1;0;15;1;-;-"
-default.window = "2;1;0;0;irc;bnc.tnias"
-default.window = "3;1;0;0;perl;highmon"
+default.buffer = "irc;server.bnc;3"
+default.buffer = "irc;bnc.##javascript;4"
+default.buffer = "irc;bnc.##knuddelkanal;5"
+default.buffer = "irc;bnc.##learnpython;6"
+default.buffer = "irc;bnc.##networking;7"
+default.buffer = "irc;bnc.##security;8"
+default.buffer = "irc;bnc.##shellcoder;9"
+default.buffer = "irc;bnc.##tilingwm;10"
+default.buffer = "irc;bnc.#archlinux;11"
+default.buffer = "irc;bnc.#archlinux.de;12"
+default.buffer = "irc;bnc.#arduino;13"
+default.buffer = "irc;bnc.#crux;14"
+default.buffer = "irc;bnc.#diaspora-de;15"
+default.buffer = "irc;bnc.#emberjs;16"
+default.buffer = "irc;bnc.#esp8266;17"
+default.buffer = "irc;bnc.#fluxfingers;18"
+default.buffer = "irc;bnc.#go-nuts;19"
+default.buffer = "irc;bnc.#honeypots;20"
+default.buffer = "irc;bnc.#i3;21"
+default.buffer = "irc;bnc.#learnjavascript;22"
+default.buffer = "irc;bnc.#lua;23"
+default.buffer = "irc;bnc.#manjaro-de;24"
+default.buffer = "irc;bnc.#manjaro-de-talk;25"
+default.buffer = "irc;bnc.#micropython;26"
+default.buffer = "irc;bnc.#neovim;27"
+default.buffer = "irc;bnc.#python.de;28"
+default.buffer = "irc;bnc.#r_netsec;29"
+default.buffer = "irc;bnc.#radare;30"
+default.buffer = "irc;bnc.#ranger;31"
+default.buffer = "irc;bnc.#stratum0;32"
+default.buffer = "irc;bnc.#vuejs;33"
+default.buffer = "irc;bnc.#weechat;34"
+default.buffer = "irc;bnc.#zeromutarts;35"
+default.buffer = "irc;bnc.#znc;36"
+default.buffer = "irc;bnc.#zsh;37"
+default.buffer = "irc;server.radio;38"
+default.buffer = "irc;radio.#theradiocc;39"
+default.window = "1;0;0;0;irc;bnc.#vuejs"
 default.current = on
+_zoom.window = "1;0;0;0;irc;bnc.#archlinux"
 
 [notify]
 
@@ -406,7 +412,7 @@ irc_smart = on;*;irc_smart_filter;*
 [key]
 ctrl-? = "/input delete_previous_char"
 ctrl-A = "/input move_beginning_of_line"
-ctrl-B = "/input move_previous_char"
+ctrl-B = "/bar toggle buffers"
 ctrl-C = "/bar toggle nicklist"
 ctrl-C_ = "/input insert \x1F"
 ctrl-Cb = "/input insert \x02"
@@ -427,11 +433,14 @@ ctrl-N = "/buffer +1"
 ctrl-P = "/buffer -1"
 ctrl-R = "/input search_text"
 ctrl-Sctrl-U = "/input set_unread"
-ctrl-T = "/input transpose_chars"
+ctrl-T = "/timeOff"
 ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
+ctrl-Z = "/set weechat.look.buffer_time_format "%H:%M ""
+meta-meta-OP = "/bar scroll buflist * b"
+meta-meta-OQ = "/bar scroll buflist * e"
 meta-meta2-1~ = "/window scroll_top"
 meta-meta2-23~ = "/bar scroll nicklist * b"
 meta-meta2-24~ = "/bar scroll nicklist * e"
@@ -464,6 +473,8 @@ meta-OC = "/input move_next_word"
 meta-OD = "/input move_previous_word"
 meta-OF = "/input move_end_of_line"
 meta-OH = "/input move_beginning_of_line"
+meta-OP = "/bar scroll buflist * -100%"
+meta-OQ = "/bar scroll buflist * +100%"
 meta-Oa = "/input history_global_previous"
 meta-Ob = "/input history_global_next"
 meta-Oc = "/input move_next_word"
@@ -638,6 +649,7 @@ meta-wmeta-s = "/window swap"
 meta-x = "/input zoom_merged_buffer"
 meta-z = "/window zoom"
 ctrl-_ = "/input undo"
+ctrl-t = "/timeOn"
 
 [key_search]
 ctrl-I = "/input search_switch_where"
@@ -677,6 +689,8 @@ meta2-D = "/cursor move left"
 @chat(*)>item(buddylist):button1-gesture-* = "hsignal:buddylist_mouse"
 @bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
 @bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
+@bar(buflist):ctrl-wheeldown = "hsignal:buflist_mouse"
+@bar(buflist):ctrl-wheelup = "hsignal:buflist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
 @bar(nicklist):button1-gesture-down = "/bar scroll nicklist ${_window_number} +100%"
 @bar(nicklist):button1-gesture-down-long = "/bar scroll nicklist ${_window_number} e"
@@ -699,6 +713,8 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
 @item(buffers):button1* = "hsignal:buffers_mouse"
 @item(buffers):button2* = "hsignal:buffers_mouse"
+@item(buflist):button1* = "hsignal:buflist_mouse"
+@item(buflist):button2* = "hsignal:buflist_mouse"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
