--- a/.i3status.conf
+++ b/.i3status.conf
@@ -11,12 +11,12 @@ general {
         interval = 5
 }
 
-order += "wireless wlp2s0"
-order += "ethernet eno1"
+order += "wireless wlp1s0"
+#order += "ethernet eno1"
 order += "battery 0"
 order += "tztime local"
 
-wireless wlp2s0 {
+wireless wlp1s0 {
         #format_up = "W: (%quality at %essid) %ip"
         format_up = " %ip"
         format_down = "W: down"
